test-suite/parser/pass/block_expr.first
function f() -> Int {
  let x = { let a = 1; let b = 2; a + b };
  return x;
}
