test-suite/parser/fail/missing_semicolon_expr.first
function f() -> Int {
  let x = 1
  return x;
}
